@@ -1,39 +1,29 @@
 package com.confpub.web;
 
-import org.springframework.transaction.annotation.Transactional;
 import com.confpub.domain.Attachment;
 import com.confpub.domain.Page;
 import com.confpub.domain.PageAttachment;
 import com.confpub.domain.PublishLog;
-
 import com.confpub.repository.AttachmentRepository;
 import com.confpub.repository.PageAttachmentRepository;
 import com.confpub.repository.PageRepository;
-
 import com.confpub.service.PublishingService;
-
-import com.confpub.web.dto.CreatePageRequest;
-import com.confpub.web.dto.PageDetailsResponse;
-import com.confpub.web.dto.UpdatePageRequest;
-import com.confpub.web.dto.AddAttachmentsRequest;
-import com.confpub.web.dto.ReorderAttachmentsRequest;
-import com.confpub.web.dto.PublishResponse;
-
+import com.confpub.web.dto.*;
 import jakarta.validation.Valid;
-
 import org.springframework.http.ResponseEntity;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Map;
+import java.util.NoSuchElementException;
 import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/pages")
 @Validated
 public class PageController {
-
     private final PageRepository pageRepository;
     private final AttachmentRepository attachmentRepository;
     private final PageAttachmentRepository pageAttachmentRepository;
@@ -49,20 +39,36 @@ public class PageController {
         this.publishingService = publishingService;
     }
 
+    // ==== Pages ====
+
     @GetMapping
-    public List<Page> listPages() {
-        return pageRepository.findAll();
+    public List<PageSummaryResponse> listPages() {
+        return pageRepository.findAll()
+                .stream()
+                .map(this::toSummaryResponse)
+                .toList();
+    }
+
+    private PageSummaryResponse toSummaryResponse(Page page) {
+        PageSummaryResponse s = new PageSummaryResponse();
+        s.setId(page.getId());
+        s.setTitle(page.getTitle());
+        s.setSpaceKey(page.getSpaceKey());
+        s.setParentPageId(page.getParentPageId());
+        s.setCreatedAt(page.getCreatedAt());
+        s.setUpdatedAt(page.getUpdatedAt());
+        return s;
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<PageDetailsResponse> getPage(@PathVariable Long id) {
-        return pageRepository.findById(id)
-                .map(this::toDetailsResponse)
-                .map(ResponseEntity::ok)
-                .orElseGet(() -> ResponseEntity.notFound().build());
+    public PageDetailsResponse get(@PathVariable Long id) {
+        Page page = pageRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Page not found: " + id));
+        return toDetailsResponse(page);
     }
 
     @PostMapping
+    @Transactional // ✅ добавлено
     public ResponseEntity<PageDetailsResponse> createPage(@Valid @RequestBody CreatePageRequest request) {
         Page page = new Page();
         page.setTitle(request.getTitle());
@@ -77,7 +83,6 @@ public class PageController {
             for (Long attachmentId : request.getAttachmentIds()) {
                 Attachment attachment = attachmentRepository.findById(attachmentId).orElse(null);
                 if (attachment == null) continue;
-
                 PageAttachment pa = new PageAttachment();
                 pa.setPage(saved);
                 pa.setAttachment(attachment);
@@ -90,70 +95,55 @@ public class PageController {
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<PageDetailsResponse> updatePage(
-            @PathVariable Long id,
-            @Valid @RequestBody UpdatePageRequest request) {
-
-        return pageRepository.findById(id)
-                .map(page -> {
-                    page.setTitle(request.getTitle());
-                    page.setContent(request.getContent());
-                    page.setSpaceKey(request.getSpaceKey());
-                    page.setParentPageId(request.getParentPageId());
-                    Page saved = pageRepository.save(page);
-                    return ResponseEntity.ok(toDetailsResponse(saved));
-                })
-                .orElseGet(() -> ResponseEntity.notFound().build());
+    public ResponseEntity<PageDetailsResponse> updatePage(@PathVariable Long id,
+                                                          @Valid @RequestBody UpdatePageRequest request) {
+        Page page = pageRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Page not found: " + id));
+        page.setTitle(request.getTitle());
+        page.setContent(request.getContent());
+        page.setSpaceKey(request.getSpaceKey());
+        page.setParentPageId(request.getParentPageId());
+        Page saved = pageRepository.save(page);
+        return ResponseEntity.ok(toDetailsResponse(saved));
     }
 
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deletePage(@PathVariable Long id) {
-        var pageOpt = pageRepository.findById(id);
-        if (pageOpt.isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
-
-        var links = pageAttachmentRepository.findByPageIdOrderByPositionAsc(id);
+        Page page = pageRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Page not found: " + id));
+        List<PageAttachment> links = pageAttachmentRepository.findByPageIdOrderByPositionAsc(id);
         pageAttachmentRepository.deleteAll(links);
-
-        pageRepository.delete(pageOpt.get());
+        pageRepository.delete(page);
         return ResponseEntity.noContent().build();
     }
 
+    // ==== Attachments binding ====
+
     @PostMapping("/{id}/attachments")
-    public ResponseEntity<PageDetailsResponse> addAttachments(
-            @PathVariable Long id,
-            @Valid @RequestBody AddAttachmentsRequest request) {
-
-        return pageRepository.findById(id)
-                .map(page -> {
-                    int position = pageAttachmentRepository
-                            .findByPageIdOrderByPositionAsc(id)
-                            .size();
-
-                    for (Long attachmentId : request.getAttachmentIds()) {
-                        Attachment attachment = attachmentRepository.findById(attachmentId).orElse(null);
-                        if (attachment == null) continue;
-
-                        PageAttachment pa = new PageAttachment();
-                        pa.setPage(page);
-                        pa.setAttachment(attachment);
-                        pa.setPosition(position++);
-                        pageAttachmentRepository.save(pa);
-                    }
-
-                    return ResponseEntity.ok(toDetailsResponse(page));
-                })
-                .orElseGet(() -> ResponseEntity.notFound().build());
+    @Transactional
+    public ResponseEntity<PageDetailsResponse> addAttachments(@PathVariable Long id,
+                                                              @Valid @RequestBody AddAttachmentsRequest request) {
+        Page page = pageRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Page not found: " + id));
+        int position = pageAttachmentRepository.findByPageIdOrderByPositionAsc(id).size();
+        for (Long attachmentId : request.getAttachmentIds()) {
+            Attachment attachment = attachmentRepository.findById(attachmentId).orElse(null);
+            if (attachment == null) continue;
+            PageAttachment pa = new PageAttachment();
+            pa.setPage(page);
+            pa.setAttachment(attachment);
+            pa.setPosition(position++);
+            pageAttachmentRepository.save(pa);
+        }
+        return ResponseEntity.ok(toDetailsResponse(page));
     }
 
     @DeleteMapping("/{id}/attachments/{attachmentId}")
-    public ResponseEntity<PageDetailsResponse> removeAttachment(
-            @PathVariable Long id, @PathVariable Long attachmentId) {
-
+    @Transactional
+    public ResponseEntity<PageDetailsResponse> removeAttachment(@PathVariable Long id,
+                                                                @PathVariable Long attachmentId) {
         List<PageAttachment> links = pageAttachmentRepository.findByPageIdOrderByPositionAsc(id);
         boolean removed = false;
-
         for (PageAttachment link : links) {
             if (link.getAttachment().getId().equals(attachmentId)) {
                 pageAttachmentRepository.delete(link);
@@ -161,9 +151,10 @@ public class PageController {
                 break;
             }
         }
-
-        if (!removed) return ResponseEntity.notFound().build();
-
+        if (!removed) {
+            throw new NoSuchElementException("Attachment not linked to page: " + attachmentId);
+        }
+        // переиндексация
         List<PageAttachment> remaining = pageAttachmentRepository.findByPageIdOrderByPositionAsc(id);
         for (int i = 0; i < remaining.size(); i++) {
             if (remaining.get(i).getPosition() != i) {
@@ -171,64 +162,66 @@ public class PageController {
                 pageAttachmentRepository.save(remaining.get(i));
             }
         }
-
-        return pageRepository.findById(id)
-                .map(p -> ResponseEntity.ok(toDetailsResponse(p)))
-                .orElseGet(() -> ResponseEntity.notFound().build());
+        Page page = pageRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Page not found: " + id));
+        return ResponseEntity.ok(toDetailsResponse(page));
     }
 
     @PatchMapping("/{id}/attachments/reorder")
-    public ResponseEntity<PageDetailsResponse> reorderAttachments(
-            @PathVariable Long id,
-            @Valid @RequestBody ReorderAttachmentsRequest request) {
-
+    @Transactional
+    public ResponseEntity<PageDetailsResponse> reorderAttachments(@PathVariable Long id,
+                                                                  @Valid @RequestBody ReorderAttachmentsRequest request) {
         List<PageAttachment> links = pageAttachmentRepository.findByPageIdOrderByPositionAsc(id);
-        if (links.isEmpty()) return ResponseEntity.notFound().build();
-
+        if (links.isEmpty()) {
+            throw new NoSuchElementException("No attachments for page: " + id);
+        }
         List<Long> ids = request.getAttachmentIdsInOrder();
-        if (ids.size() != links.size()) return ResponseEntity.badRequest().build();
-
+        if (ids.size() != links.size()) {
+            throw new IllegalArgumentException("Attachment count mismatch");
+        }
         Map<Long, PageAttachment> byId = links.stream()
                 .collect(Collectors.toMap(l -> l.getAttachment().getId(), l -> l));
-
         int pos = 0;
         for (Long aId : ids) {
             PageAttachment link = byId.get(aId);
-            if (link == null) return ResponseEntity.badRequest().build();
-
+            if (link == null) {
+                throw new IllegalArgumentException("Unknown attachment id in order: " + aId);
+            }
             if (link.getPosition() != pos) {
                 link.setPosition(pos);
                 pageAttachmentRepository.save(link);
             }
             pos++;
         }
-
-        return pageRepository.findById(id)
-                .map(p -> ResponseEntity.ok(toDetailsResponse(p)))
-                .orElseGet(() -> ResponseEntity.notFound().build());
+        Page page = pageRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Page not found: " + id));
+        return ResponseEntity.ok(toDetailsResponse(page));
     }
 
+    // ==== Publishing ====
 
-    @Transactional
     @PostMapping("/{id}/publish")
+    @Transactional
     public ResponseEntity<PublishResponse> publish(@PathVariable Long id) {
         PublishLog log = publishingService.publishNow(id);
         return ResponseEntity.ok(toPublishResponse(id, log));
     }
 
-    @Transactional(readOnly = true)
     @GetMapping("/{id}/publish/status")
+    @Transactional(readOnly = true)
     public ResponseEntity<PublishResponse> publishStatus(@PathVariable Long id) {
         PublishLog latest = publishingService.getLatestLogForPage(id);
-        if (latest == null) return ResponseEntity.notFound().build();
-        return ResponseEntity.ok(toPublishResponse(id,latest));
+        if (latest == null) {
+            throw new NoSuchElementException("No publish logs for page: " + id);
+        }
+        return ResponseEntity.ok(toPublishResponse(id, latest));
     }
+
+    // ==== Mappers ====
 
     private PublishResponse toPublishResponse(Long pageId, PublishLog log) {
         PublishResponse dto = new PublishResponse();
-        // Берём pageId из аргумента, чтобы НЕ трогать ленивую связь log.getPage()
         dto.setPageId(pageId);
-
         dto.setRemotePageId(log.getRemotePageId());
         dto.setStatus(log.getStatus().name());
         dto.setProvider(log.getProvider());
@@ -260,7 +253,7 @@ public class PageController {
                     summary.setSize(attachment.getSize());
                     summary.setDescription(attachment.getDescription());
                     return summary;
-                }).collect(Collectors.toList());
+                }).toList();
 
         response.setAttachments(attachmentSummaries);
         return response;
